# qteria

./: .env.template  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  COMMAND-REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  GETTING-STARTED.md  GLOSSARY.md  IMPLEMENTATION-PROMPT.md  PHILOSOPHY.md  QUICK-REFERENCE.md  README.md  TROUBLESHOOTING.md  coverage.xml  docker-compose.yml  linkedin-post-ai-debugging.md  package-lock.json  package.json
.claude/commands/: README-coordinate.md  README-tech-lead-consult.md  audit-guidelines.md  cascade-status.md  challenger.md  choose-tech-stack.md  coordinate.md  create-brand-strategy.md  create-content-guidelines.md  create-design.md  create-financial-model.md  create-gh-issues.md  discover-naming.md  (+23 more)
.github/: PULL_REQUEST_TEMPLATE.md
apps/api/: .env.test  .env.test.example  .env.test.local.example  .env.test.template  .gitkeep  Dockerfile  conftest.py  coverage.xml  nixpacks.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20251118_0841_f8f9051573b0_initial_schema_with_9_tables.py  20251118_1123_339026f16129_add_password_hash_to_users.py  20251124_1400_audit_log_nullable_org.py  20251124_2210_d27b61e3d79a_add_order_index_to_criteria_and_make_.py  20251125_2226_add_workflow_archive_fields.py  20251125_2330_add_composite_index_workflow_org_archived.py  20251126_0847_25424df7abc9_add_index_assessment_workflow_id.py  20251214_add_documents_table.py  20251215_add_parsed_documents_table.py  20251216_add_section_patterns_to_workflows.py  20251217_add_section_patterns_to_workflows.py  20251220_2122_add_ondelete_set_null_to_audit_logs_org_fk.py  20251220_2155_a7b8c9d0e1f2_add_ondelete_set_null_to_audit_logs_org_fk.py
apps/api/app/: constants.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/v1/: api.py
apps/api/app/api/v1/endpoints/: assessments.py  documents.py  health.py  organizations.py  workflows.py
apps/api/app/core/: __init__.py  auth.py  config.py  dependencies.py  exceptions.py
apps/api/app/middleware/: __init__.py  multi_tenant.py  request_id.py
apps/api/app/models/: __init__.py  base.py  enums.py  mixins.py  models.py
apps/api/app/schemas/: __init__.py  assessment.py  document.py  organization.py  workflow.py
apps/api/app/services/: __init__.py  audit.py  blob_storage.py  pdf_parser.py  pdf_parser_README.md  pdf_parser_test.py
apps/api/scripts/: __init__.py  clear_test_data.py  seed_data.py  seed_test_data.py  seed_test_user.py  verify_deployment.py
apps/api/tests/: README.md  __init__.py  conftest.py  test_assessments_api.py  test_blob_storage.py  test_config_lazy_loading.py  test_conftest.py  test_documents_api.py  test_exceptions.py  test_migrations.py  test_multi_tenancy.py  test_pdf_parser_integration.py  test_rbac.py  test_rbac_integration.py  test_seed_idempotent.py  test_test_discovery.py  test_workflow_api.py  test_workflows_api.py
design/: README.md
docs/: AI-DEBUGGING-BEST-PRACTICES.md  OAUTH_SETUP.md
examples/: README.md
product-guidelines/: 00-user-journey.md  01-product-strategy.md  02-tech-stack.md  03-mission.md  04-architecture.md  04-metrics.md  04-monetization.md  05-brand-strategy.md  06-design-system.md  07-database-schema-essentials.md  07-database-schema.md  08-api-contracts-essentials.md  08-api-contracts.md  09-test-strategy-essentials.md  09-test-strategy.md  11-product-strategy-essentials.md  12-project-scaffold.md  13-deployment-plan.md  14-observability-strategy.md  15-brand-naming.md  16-brand-messaging.md  17-brand-identity.md  18-content-guidelines.md
templates/: 00-user-journey-interview-template.md  00-user-journey-template.md  01-product-strategy-template.md  02-tech-stack-template.md  03-mission-template.md  04-architecture-template.md  04-metrics-template.md  04-monetization-template.md  05-brand-strategy-template.md  06-design-system-template.md  07-database-schema-essentials-template.md  07-database-schema-template.md  08-api-contracts-essentials-template.md  08-api-contracts-template.md  09-test-strategy-essentials-template.md  09-test-strategy-template.md  11-product-strategy-essentials-template.md  13-deployment-plan-template.md  14-observability-strategy-template.md  15-brand-naming-template.md  16-brand-messaging-template.md  17-brand-identity-template.md  18-content-guidelines-template.md  19-user-experience-template.md  20-analytics-plan-template.md  21-growth-strategy-template.md  22-financial-model-template.md  README.md  issue-template.md
(+146 files in other folders)
