[tool.poetry]
name = "qteria-api"
version = "0.1.0"
description = "Qteria API - FastAPI backend for AI-driven document validation"
authors = ["Qteria Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = "^5.3.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
anthropic = "^0.17.0"
PyPDF2 = "^3.0.1"
pdfplumber = "^0.10.3"
python-docx = "^1.1.0"
reportlab = "^4.0.9"
pillow = "^10.2.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
types-passlib = "^1.7.7"
types-python-jose = "^3.3.4"
types-psutil = "^5.9.5"
types-tabula-py = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E402",  # module level import not at top of file (temp: many conditional imports)
    "B904",  # exception handling without 'from err' (temp: will fix in follow-up)
    "F401",  # unused imports (temp: will clean up in follow-up)
    "F541",  # f-string without placeholders (temp: will fix in follow-up)
    "F841",  # unused local variable (temp: will clean up in follow-up)
    "W293",  # blank line contains whitespace (temp: formatting issue)
    "UP007", # use X | Y for type annotations (temp: Python 3.10+ syntax)
    "UP037", # remove quotes from type annotation (temp: forward references)
    "F821",  # undefined name in forward reference (temp: type checking issue)
    "B007",  # loop control variable not used (temp: will refactor in follow-up)
    "I001",  # import block unsorted (temp: will organize imports in follow-up)
    "E712",  # comparison to True/False (temp: will fix in follow-up)
    "B017",  # pytest.raises too broad (temp: will make specific in follow-up)
    "F811",  # redefinition of unused variable (temp: will clean up in follow-up)
    "C416",  # unnecessary list comprehension (temp: will optimize in follow-up)
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    ".venv",
    "alembic/versions",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "PyPDF2.*",
    "pdfplumber.*",
    "reportlab.*",
    "vercel_blob.*",
    "pytesseract.*",
    "python_magic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
